--- a/.github/workflows/pr_comment.yaml
+++ b/.github/workflows/pr_comment.yaml
@@ -10,6 +10,8 @@ jobs:
     permissions:
       issues: write
       pull-requests: write
+      deployments: write
+      contents: read
     steps:
       - name: React to comment
         uses: actions/github-script@v7
